add tests and docker
