# docs/swagger.json
@@ -44,12 +44,6 @@
                             "$ref": "#/definitions/model.ErrorResponse"
                         }
                     },
-                    "401": {
-                        "description": "Неавторизован.",
-                        "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
-                        }
-                    },
                     "500": {
                         "description": "Внутренняя ошибка сервера.",
                         "schema": {
@@ -70,15 +64,6 @@
                     "application/json"
                 ],
                 "summary": "Купить предмет за монеты.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Название предмета",
-                        "name": "item",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Успешный ответ."
